--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,7 @@
 
 
 .Movie-box {
+    position: relative;
     border: 1px solid red;
     margin: 5px;
     padding: 2px;
@@ -76,12 +77,22 @@
     max-width: 600px;
     min-width: 245px;
     height: 20rem;
+    background-color: #83142c;
 }
 
 @media only screen and (max-width: 768px) {
     .Movie-box {
 
     }
+}
+
+.Movie-box .m-title {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: large;
+    color: #f9f5ad;
 }
 
 
