--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,8 @@
 body{
   overflow-y: hidden !important;
   overflow-x: hidden !important;
+  background-color: #83142c;
+
 }
 .Home-page {
   height: -webkit-fill-available;
@@ -63,33 +65,38 @@ body{
 
 .Movie-list-container {
   border: 1px solid black;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 15px;
 }
 
 @media only screen and (max-width: 768px) {
   .Movie-list-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 .Movie-box {
   position: relative;
-  border: 1px solid red;
   margin: 5px;
   padding: 2px;
   text-align: center;
   display: inline-block;
-  width: 30%;
-  max-width: 600px;
-  min-width: 245px;
   height: 20rem;
-  background-color: #83142c;
+  background-color: #9b142d;
 
   .m-title {
-    position: absolute;
     bottom: 0;
-    left: 50%;
     transform: translate(-50%, -50%);
     font-size: large;
     color: #f9f5ad;
+    display: inline;
+  }
+
+  img {
+    height: 250px;
+    border:1px solid #f9f5ad;
+
   }
 }
 
@@ -103,18 +110,17 @@ body{
   border: 1px solid red;
   height: -webkit-fill-available;
   text-align: center;
+  color: #f9f5ad;
 
   .Movie-poster {
     position: relative;
     width: auto;
     height: auto;
-    border: 1px solid blue;
     display: block;
 
     .m-img {
       position: relative;
       margin: 0 25% 0 25%;
-      border: 1px #44000d dashed;
       width: 50%;
       min-width: 400px;
       height: 400px;
@@ -122,10 +128,11 @@ body{
     }
     .m-title {
       position: absolute;
-      bottom: 0;
       left: 50%;
       transform: translate(-50%, -50%);
       font-size: xx-large;
+      bottom: -28%;
+
     }
   }
 
